--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 smtp_server=sandbox.smtp.mailtrap.io
 smtp_port=2525
-smtp_username=
-smtp_password=
+smtp_username= 00f4386ccb69d8
+smtp_password= c5630ac4c92ca3
